# broadcast-japan-weather-by-linebot

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: steering-creator.md
.steering/20260203-switch-to-weatherapi/: design.md  (+2 more)
app/: Dockerfile  pyproject.toml
app/.devcontainer/: devcontainer.json
app/domain/entities/: user.py
app/domain/repositories/: user_repository.py
app/domain/services/: weather_calculator.py
app/domain/value_objects/: location.py  weather.py
app/handlers/: broadcast.py  webhook.py
app/infrastructure/: exceptions.py
app/infrastructure/dynamodb/: user_repository.py
app/infrastructure/gsi/: geocoding_client.py
app/infrastructure/jma/: area_mapper.py  client.py
app/infrastructure/line/: messaging_client.py
app/infrastructure/openweathermap/: client.py
app/infrastructure/weatherapi/: client.py
app/tests/domain/: test_location.py  test_user.py  test_weather.py  test_weather_calculator.py
app/tests/handlers/: test_broadcast.py  test_webhook.py
app/tests/infrastructure/: test_dynamodb_user_repository.py  test_geocoding_client.py  test_jma_area_mapper.py  test_jma_client.py  test_line_messaging_client.py  test_line_push_message.py  test_openweathermap_client.py  test_weatherapi_client.py
app/tests/usecases/: test_broadcast_weather.py  test_register_region.py
app/usecases/: broadcast_weather.py  register_region.py
app/utils/: logger.py  retry.py
cdk/: Dockerfile  biome.json  cdk.json  package-lock.json  package.json  tsconfig.json
docs/: cicd.md  product-requirements.md  repository-structure.md
(+34 files in other folders)
